# diffusionlab

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: free_walk.json  reflecting_box.json  step_length_05.json  step_length_20.json
diffusionlab/: analysis.py  cli.py  config.py  io.py  plotting.py  random_walk.py
results/free_walk/: msd.csv  summary.json
tests/: test_analysis.py  test_config.py  test_io.py  test_random_walk.py
